use relative_url tag

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: "https://chichou.github.io/mistune/"
-baseurl: "/" 
+url: "https://chichou.github.io"
+baseurl: "/mistune" 
 title: "Mistune Bug"
 
 video: Hj053p7_DC0
